--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,11 @@ h3{
     margin-bottom: 1em;
 }
 
+.section__subtitle--work {
+    color: var(--clr-accent);
+    font-weight: var(--fw-bold);
+    margin-bottom: 2em;
+}
 /* header */
 
 nav{
@@ -264,5 +269,22 @@ nav{
 
     .about-me__img {
         grid-area: img;
+        position: relative;
+        z-index: 2;
     }
 }
+
+/* My Work */
+
+.my-work{
+    background-color: var(--clr-dark);
+    color: var(--clr-light);
+    text-align: center;
+
+}
+
+.portfolio {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+
