--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ header {
 }
 
 .logo {
-    max-width: 200px;
+    max-width: 150px;
 }
 
 .nav {
@@ -193,7 +193,7 @@ header {
     cursor: pointer;
     position: absolute;
     right: 1em;
-    top: 1em;
+    top: 4em;
     z-index: 1000;
 }
 
@@ -220,6 +220,7 @@ header {
 .hamburger {
     display: block;
     position: relative;
+    margin: auto;
 }
 
 .hamburger,
@@ -228,7 +229,7 @@ header {
     background: var(--clr-accent);
     width: 2em;
     height: 3px;
-    border-radius: 1em;
+    border-radius: 4em;
     transition: transform 250ms ease-in-out;
 }
 
@@ -414,6 +415,10 @@ header {
     opacity: .75;
 }
 
+.portfolio__item + .portfolio__item{
+    margin-left: 0.5em;
+}
+
 /* Footer */
 
 .footer {
@@ -469,5 +474,6 @@ header {
 }
 
 .portfolio-item-individual p {
-    max-width: 600px;
+    max-width: 800px;
+    font-size: 1.5em;
 }
