--- a/css/style.css
+++ b/css/style.css
@@ -343,7 +343,8 @@ header {
 }
 
 .about-me__img {
-    box-shadow: var(--bs);
+    /*box-shadow: var(--bs);*/
+    max-width: 300px;
 }
 
 @media (min-width: 600px) {
